@startuml
class Map
class Segment
class ListRequests
class Intersection
class Request
class Tour

Map "1"-->" 0..*"Segment
Map "1"-->" 0..*"Intersection
Segment "1"-->"1" Intersection
Segment "1"-->"1" Intersection

Intersection "1"<--"1"Request
Intersection "1"<--"1" Request
ListRequests "1"-->"0..*" Request
ListRequests <-- Tour
Map <--Tour
Tour-->Intersection
Tour-->Segment
@enduml